--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <meta name="description" content="უმაღლესი ხარისხის მწვანილის ფართო არჩევანი: სალათის ფურცლები, რუკოლა, მიკრომწვანილები, წითელი ფხალი, პრასი. შეიტყვეთ მეტი ჩვენი პროდუქციის სარგებლიანობის შესახებ.">
     <meta name="keywords" content="მწვანილი, სალათის ფურცლები, რუკოლა, მიკრომწვანილები, წითელი ფხალი, პრასი, ნატურალური პროდუქცია, ჯანსაღი საკვები, ეკოლოგიურად სუფთა">
     <meta name="author" content="Your Name/Company Name">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourwebsite.com/">
     <meta property="og:title" content="მწვანილის სამყარო - ნატურალური და ჯანსაღი პროდუქცია">
     <meta property="og:description" content="უმაღლესი ხარისხის მწვანილის ფართო არჩევანი: სალათის ფურცლები, რუკოლა, მიკრომწვანილები, წითელი ფხალი, პრასი. შეიტყვეთ მეტი ჩვენი პროდუქციის სარგებლიანობის შესახებ.">
     <meta property="og:image" content="https://yourwebsite.com/img/main.jpg">
-
+    
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yourwebsite.com/">
     <meta property="twitter:title" content="FRESH Harvest - ნატურალური და ჯანსაღი პროდუქცია">
     <meta property="twitter:description" content="უმაღლესი ხარისხის მწვანილის ფართო არჩევანი: სალათის ფურცლები, რუკოლა, მიკრომწვანილები, წითელი ფხალი, პრასი. შეიტყვეთ მეტი ჩვენი პროდუქციის სარგებლიანობის შესახებ.">
     <meta property="twitter:image" content="https://yourwebsite.com/img/main.jpg">
+    
 </head>
 <body>
     <header>
