--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="უმაღლესი ხარისხის მწვანილის ფართო არჩევანი: სალათის ფურცლები, რუკოლა, მიკრომწვანილები, წითელი ფხალი, პრასი. შეიტყვეთ მეტი ჩვენი პროდუქციის სარგებლიანობის შესახებ.">
     <meta name="keywords" content="მწვანილი, სალათის ფურცლები, რუკოლა, მიკრომწვანილები, წითელი ფხალი, პრასი, ნატურალური პროდუქცია, ჯანსაღი საკვები, ეკოლოგიურად სუფთა">
     <meta name="author" content="Your Name/Company Name">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourwebsite.com/">
@@ -110,6 +110,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
